Text wrap fix on homepage

--- a/css/layouts/blog.css
+++ b/css/layouts/blog.css
@@ -158,6 +158,11 @@ p   {
     padding-bottom: 5px;
 
 }
+@media (max-width: 400px){
+.post-copy {
+        float:right;
+    }
+}
 .post-meta {
     color: #999;
     font-size: 90%;
